# Misc

./: .vimrc  CMakeLists.txt  MAIN  Main_teste.cpp  Makefile  SatInstance.cpp  SatInstance.h  in.txt  in2.txt  main.cpp
